--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,10 @@
     text-decoration: underline;
 }
 #sidebar {
-    background-color:rgb(53, 135, 15);
+    background-color:white;
     overflow: hidden;
     padding: 10px;
-
+    
 }
 
 #sidebar-container {
@@ -49,7 +49,10 @@
     padding: 0;
     display: grid;
     vertical-align: top;
+    background-color: green;
 }
+
+/* got to try some other stuff to not have container take up the entire page */
 #sidebar ul {
     float: right;
 }
