--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,12 @@
 #main-navbar ul li a:hover {
     text-decoration: underline;
 }
+
+/* for the sidebar */
 #sidebar {
     background-color:white;
     overflow: hidden;
     padding: 10px;
-    
 }
 
 #sidebar-container {
