--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@
 #sidebar-container {
     width: 100%;
     position: relative;
+    top: 3px;
+    right: 30px;
     text-align: right;   
 }
 #sidebar ul  {
@@ -68,6 +70,44 @@
 #sidebar ul li a:hover {
     text-decoration: underline;
 }
-.bodybackground{
-    background-color: rgb(212, 150, 34);
+#bodybackground{
+    background-color: rgba(212, 150, 34, 0.257);
+}
+
+#footerstyle {
+    background-color: lightpink;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+}
+.box{
+    box-sizing: border-box;
+    display:inline-block;
+    width: 100px;
+    padding: 30px;
+    height: auto;
+    background: yellow;
+    color: rgb(156, 28, 28)
+    
+}
+#one {
+    position: relative;
+    top: 20px;
+    left: 20px;
+    background: blue;
+}
+#two {
+    position: absolute;
+    top: 30px;
+}
+#three {
+    position: relative;
+    top: 20px;
+    right: 20px;
+    background:rgb(156, 28, 28);
+    color: white;
+}
+#four {
+    position: absolute;
+    top: 30px;
 }
